registering new wordpress instances

--- a/app/views/wordpress_instances/_form.html.erb
+++ b/app/views/wordpress_instances/_form.html.erb
@@ -2,5 +2,6 @@
   <%= f.input :name %>
   <%= f.input :url %>
   <%= f.input :api_key %>
-  <%= f.input :auto_checking %>
+  <%= f.input :auto_checking, boolean_style: :nested %>
+  <%= f.submit 'Register Wordpress Installation', class: 'btn btn-primary' %>
 <% end %>
