--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
             <ul class="nav nav-pills pull-right">
               <% if user_signed_in? %>
                 <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+                <li><%= link_to "Edit profile", edit_user_registration_path %></li>
               <% else %>
                 <li><%= link_to "Log in", new_user_session_path %></li>
                 <li><%= link_to "Sign up", new_user_registration_path %></li>
