added homepage text and tutorial
Include feedback link

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,3 +29,13 @@
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
   box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
+
+.jumbotron {
+  background: asset-url("pressevent.png") center;
+  background-size: cover;
+  height: 400px;
+  padding: 40px 20px;
+  margin-top: -20px;
+  margin-right: -20px;
+  margin-left: -20px;
+}
