--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,8 @@
       </div>
     </div>
 
+    <%= yield :head %>
+
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span8 offset2">
