--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,14 +20,14 @@
   <h3>How it works</h2>
   <p><%= image_tag 'faq/wp-updater-api.png', alt: 'wp-updater-api plugin' %></p>
   <p>
-  Install the <a href="http://wordpress.org/plugins/wp-updater-api/">wp-updater-api plugin</a>
-  so pressevent can track updates for your installation.
+  Install the <a href="http://wordpress.org/plugins/wp-updater-api/">wp-updater-api
+    plugin</a> so pressevent can track updates for your installation.
   </p>
 
   <p><%= image_tag 'faq/api_key.png', alt: 'Get the api key' %></p>
   <p>
-  Note the api key for later, the api key ensures that you don't have to give away the keys to the kingdom
-  ie your wordpress username and password.
+  Note the api key for later, the api key ensures that you don't have to give
+  away the keys to the kingdom ie your wordpress username and password.
   </p>
 
   <p><%= image_tag 'faq/signup.png', alt: 'Signup for pressevent' %></p>
@@ -37,18 +37,20 @@
 
   <p><%= image_tag 'faq/register_wordpress.png', alt: 'Register an installation' %></p>
   <p>
-  Go to your dashboard and register a new wordpress installation. Enable autochecking so you get an
-  email when new updates are available, or check by hand.
+  Go to your dashboard and register a new wordpress installation. Enable
+  autochecking so you get an email when new updates are available, or check by
+  hand.
   </p>
 
   <p><%= image_tag 'faq/see_the_report.png', alt: 'The report' %></p>
   <p>
-  See the report, watch out generating a fresh report might take a while, so no need to constantly
-  click the check for updates button, aye!
+  See the report, watch out generating a fresh report might take a while, so no
+  need to constantly click the check for updates button, aye!
   </p>
 
   <p>
-  Enjoy and keep save! Pressevent is still alpha so be sure to sent <%= mail_to "philipp.fehre+pressevent@gmail.com", "feedback"%>!
+  Enjoy and keep save! Pressevent is still alpha so be sure to sent
+  <%= mail_to "philipp.fehre+pressevent@gmail.com", "feedback"%>!
   </p>
 
 </div>
