--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,4 +1,9 @@
 <h1>Update Report for <%= @report.name %></h1>
+
+<div class="nav nav-pills">
+  <li class="active"><%= link_to 'Back to Dashboard', wp_installations_path %></li>
+</div>
+
 <table class="table table-hover" id="wp-installations-list">
   <thead>
     <tr>
