--- a/app/views/wp_installations/index.html.erb
+++ b/app/views/wp_installations/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Wordpress installations</h1>
-<%= link_to 'Register a new Installation', new_wp_installation_path, class: 'btn btn-primary' %>
+
+<div class="nav nav-pills">
+  <li class="active"><%= link_to 'Register a new Installation', new_wp_installation_path %></li>
+</div>
+
 <table class="table table-hover" id="wp-installations-list">
   <thead>
     <tr>
