Add some info if no updates are available
FIXES #33

--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -4,16 +4,22 @@
   <li class="active"><%= link_to 'Back to Dashboard', wp_installations_path %></li>
 </div>
 
-<table class="table table-hover" id="wp-installations-list">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>URL</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render @report.core_updates %>
-    <%= render @report.plugin_updates %>
-  </tbody>
-</table>
+<% unless @report.updates_available? %>
+  <h3>Everything is up-to-date!</h3>
+  <%= image_tag "cake.jpg", alt: "have a cake!", class: "img-rounded" %>
+  <p>Have a cake!</p>
+<% else %>
+  <table class="table table-hover" id="wp-installations-list">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>URL</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render @report.core_updates %>
+      <%= render @report.plugin_updates %>
+    </tbody>
+  </table>
+<% end %>
