don't want to update my layout so stick with bootstrap 2

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <% content_for :head do %>
   <div class="jumbotron masthead">
     <div class="container text-center">
-      <h1>Welcome to Pressevent! ALPHA</h1>
-      <h3>We make sure your Wordpress is uptodate.</h3>
+      <h1>Welcome to Pressevent!</h1>
+      <h3>Be sure your Wordpress is up2date.</h3>
 
       <p>
       <% if user_signed_in? %>
