--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,26 +12,184 @@
  *= require_tree .
  */
 
-.border-form-div {
-  max-width: 300px;
-  padding: 19px 29px 29px;
-  margin: 0 auto 20px;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-  box-shadow: 0 1px 2px rgba(0,0,0,.05);
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #333;
 }
 
-.jumbotron {
-  background: asset-url("pressevent.png") center;
-  background-size: cover;
-  height: 400px;
-  padding: 40px 20px;
-  margin-top: -20px;
-  margin-right: -20px;
-  margin-left: -20px;
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
 }
+
+
+/* Base structure */
+html,
+body {
+  height: 100%;
+  background-color: #fff;
+}
+body {
+  color: #333;
+  text-align: center;
+}
+
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+.wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+.wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+}
+.content-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.content-main {
+  text-align: left;
+}
+
+.inner-align {
+  margin-left: 10px;
+}
+
+input {
+  max-width: 100%;
+}
+
+.full-page-form {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0px auto;
+}
+
+.input-group-addon {
+  min-width: 60px;
+}
+
+.spaced-label {
+  margin: 15px 0;
+}
+
+.devise-alert {
+  margin: 15px 0 15px -169px;
+  width: 668px;
+}
+
+.btn-block {
+  margin: 15px 0 15px 0;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 30px;
+}
+
+/* Header */
+.masthead-brand {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.masthead-nav > li {
+  display: inline-block;
+}
+.masthead-nav > li + li {
+  margin-left: 20px;
+}
+.masthead-nav > li > a {
+  padding-right: 0;
+  padding-left: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  border-bottom: 2px solid transparent;
+}
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
+  background-color: transparent;
+  border-bottom-color: #a9a9a9;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
+  color: #333;
+  border-bottom-color: #333;
+}
+
+@media (min-width: 768px) {
+  .masthead-brand {
+    float: left;
+  }
+  .masthead-nav {
+    float: right;
+  }
+}
+
+/* Content */
+.content {
+  padding: 0 20px;
+}
+.content .btn-lg {
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+
+/* Footer */
+.mastfoot {
+  color: #333;
+}
+
+/*
+ * Affix and center
+ */
+@media (min-width: 768px) {
+  /* Pull out the header and footer */
+  .masthead {
+    position: fixed;
+    top: 0;
+  }
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+  /* Start the vertical centering */
+  .wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  .masthead,
+  .mastfoot,
+  .content-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+}
+
+@media (min-width: 992px) {
+  .masthead,
+  .mastfoot,
+  .content-container {
+    width: 700px;
+  }
+}
+
