--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
-<h2>Change your password</h2>
-
+<div class="content-main">
+<h2 class="form-signin-heading">Change your password</h2>
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
@@ -14,3 +14,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
