--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,25 @@
-<div class="border-form-div">
-  <h2>Edit my profile</h2>
+<div class="content-main">
+  <div class="border-form-div full-page-form">
+    <h2 class="form-signin-heading">Edit user profile</h2>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.label :email, class: "sr-only"%>
+      <%= f.email_field :email, :autofocus => true, placeholder: "Email address", class: "form-control" %>
 
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-    <%= devise_error_messages! %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
 
-    <div><%= f.label :email %><br />
-      <%= f.email_field :email, :autofocus => true %></div>
+      <%= f.label :password_field, class: "sr-only" %>
+      <%= f.password_field :password, :autocomplete => "off", placeholder: "leave blank if you don't want to change it", class: "form-control"%>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <%= f.label :password_field, class: "sr-only" %>
+      <%= f.password_field :password_confirmation, placeholder: "Password confirmation", class: "form-control" %>
+      <%= f.label :current_password %>
+      <%= f.password_field :current_password, placeholder: "current password to confirm your changes", class: "form-control" %>
+
+      <div><%= f.submit "Update",:class=>'btn btn-primary btn-lg btn-block' %></div>
     <% end %>
-
-    <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, :autocomplete => "off" %></div>
-
-    <div><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
-
-    <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password %></div>
-
-    <div><%= f.submit "Update",:class=>'btn btn-primary' %></div>
-  <% end %>
-  <%= link_to "Back", :back %>
+    <%= link_to "Back", :back %>
+  </div>
 </div>
-
