--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,92 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title><%= content_for?(:title) ? yield(:title) : "Pressevent" %></title>
-          <%= csrf_meta_tags %>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title><%= content_for?(:title) ? yield(:title) : "Pressevent" %></title>
+    <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-          <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-                    <!--[if lt IE 9]>
-                    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-                      <![endif]-->
-
-<%= stylesheet_link_tag "application", :media => "all" %>
-
-<!-- For third-generation iPad with high-resolution Retina display: -->
-<!-- Size should be 144 x 144 pixels -->
-<%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
-
-<!-- For iPhone with high-resolution Retina display: -->
-<!-- Size should be 114 x 114 pixels -->
-<%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
-
-<!-- For first- and second-generation iPad: -->
-<!-- Size should be 72 x 72 pixels -->
-<%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
-
-<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-<!-- Size should be 57 x 57 pixels -->
-<%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-
-<!-- For all other devices -->
-<!-- Size should be 32 x 32 pixels -->
-<%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-
-<%= analytics_init if Rails.env.production? %>
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Pressevent</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav nav-pills pull-right">
-              <% if user_signed_in? %>
-                <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
-                <li><%= link_to "Edit profile", edit_user_registration_path %></li>
-              <% else %>
-                <li><%= link_to "Log in", new_user_session_path %></li>
-                <li><%= link_to "Sign up", new_user_registration_path %></li>
+    <div class="wrapper">
+      <div class="wrapper-inner">
+        <div class="content-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <% flash.each do |type, message| %>
+              <div class="alert alert-block <%= bootstrap_class_for(type) %>">
+                <button class="close" data-dismiss="alert">×</button>
+                <%= message %>
+              </div>
               <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
+              <h3 class="masthead-brand"><%= link_to "Pressevent", root_path %></h3>
+              <nav>
+              <ul class="nav masthead-nav">
+                <% if user_signed_in? %>
+                  <%= nav_bar_link_to "Dashboard", wp_installations_path %>
+                  <%= nav_bar_link_to "Log out", destroy_user_session_path, method: :delete %>
+                  <%= nav_bar_link_to "Edit profile", edit_user_registration_path %>
+                <% else %>
+                  <%= nav_bar_link_to "Log in ", new_user_session_path %>
+                  <%= nav_bar_link_to "Sign up", new_user_registration_path %>
+                <% end %>
+              </ul>
+              </nav>
+            </div>
+          </div>
+
+
+          <div class="inner content">
+            <%= yield %>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>
+              Pressevent by <a href="http://sideshowcoder.com">Philipp Fehre</a> 2015
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <% flash.each do |type, message| %>
-      <div class="alert <%= bootstrap_class_for(type) %> fade in">
-        <button class="close" data-dismiss="alert">×</button>
-        <%= message %>
-      </div>
-    <% end %>
-
-    <%= yield :head %>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span8 offset2">
-          <%= yield %>
-        </div>
-      </div><!--/row-->
-
-      <footer>
-        <p>&copy; <%= link_to 'Philipp Fehre 2013', 'http://sideshowcoder.com' %></p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
-
+    <%= analytics_init if Rails.env.production? %>
   </body>
 </html>
